# nemoclaw_escapades

./: .env.example  .gitignore  CONTRIBUTING.md  GAPS.md  Makefile  README.md  pyproject.toml
.tmp/pytest/pytest-of-dpickem/: pytest-current
config/: defaults.yaml
docker/: Dockerfile.orchestrator
docs/: agent_trace_design.md  audit_db_design.md  claude_sdk_harness_adoption.md  cursor_sdk_harness_adoption.md  design.md  design_dashboard.md  design_m1.md  design_m2.md  design_m2a.md  design_m2b.md  design_m3.md  executor_advisor_nmb_design.md  inference_call_auditing_design.md  nmb_design.md  nmb_integration_tests_design.md  nv_tools_integration_design.md  openai_sdk_harness_adoption.md  openshell_runner_reuse_design.md  orchestrator_design.md  sandbox_spawn_design.md  tools_integration_design.md  training_flywheel_deep_dive.md
docs/abandoned/: nv_tools_integration_design.md
docs/blog_posts/m1/: m1_setting_up_nemoclaw.md
docs/blog_posts/m2a/: m2a_reusable_agent_loop_and_coding_tools.md
docs/blog_posts/nmb/: nmb_building_a_message_bus.md
docs/blog_posts/series_introduction/: series_introduction.md
docs/deep_dives/: build_your_own_openclaw_deep_dive.md  claude_code_deep_dive.md  hermes_deep_dive.md  hermes_vs_openclaw_comparison.md  hermes_vs_openclaw_vs_claude_code_comparison.md  hosting_deep_dive.md  nemoclaw_deep_dive.md  openai_agents_sdk_deep_dive.md  openclaw_deep_dive.md  openshell_deep_dive.md
policies/: nmb-enabled.yaml  orchestrator.yaml
prompts/: coding_agent.md  finalization_agent.md  system_prompt.md
prototypes/browser_sandbox_http/: Dockerfile  Makefile  README.md  host_client.py  policy.yaml  sandbox_http_server.py
prototypes/nmb_sandbox_communication/: Dockerfile  Makefile  README.md  nmb_smoke.py
prototypes/nmb_sandbox_communication/policies/: nmb-broker.yaml  nmb-client.yaml
scripts/: gen_config.py  gen_policy.py  test_auth.py  test_auth.sh  test_confluence_sandbox.py  test_credential_injection.sh  test_gerrit_sandbox.py  test_gitlab_sandbox.py  test_jira_sandbox.py  test_slack_search_sandbox.py
skills/code-review/: SKILL.md
skills/debugging/: SKILL.md
skills/refactor/: SKILL.md
skills/scratchpad/: SKILL.md
src/nemoclaw_escapades/: __init__.py  config.py  main.py  runtime.py
src/nemoclaw_escapades/agent/: __init__.py  __main__.py  audit_buffer.py  compaction.py  git_helpers.py  github_helpers.py  loop.py  prompt_builder.py  scratchpad.py  skill_loader.py  types.py
src/nemoclaw_escapades/audit/: __init__.py  alembic.ini  db.py  models.py  sink.py
src/nemoclaw_escapades/backends/: __init__.py  base.py  inference_hub.py
src/nemoclaw_escapades/connectors/: __init__.py  base.py  slack.py
src/nemoclaw_escapades/models/: __init__.py  types.py
src/nemoclaw_escapades/nmb/: __init__.py  broker.py  cli.py  client.py  models.py  protocol.py  sync.py
src/nemoclaw_escapades/observability/: __init__.py  logging.py  timer.py
src/nemoclaw_escapades/orchestrator/: __init__.py  approval.py  delegation.py  dispatcher.py  finalization.py  finalization_actions.py  orchestrator.py  prompt_builder.py  request_context.py  transcript_repair.py  workflow.py
src/nemoclaw_escapades/testing/: __init__.py  live_checks.py
src/nemoclaw_escapades/tools/: __init__.py  bash.py  confluence.py  delegation.py  files.py  finalization.py  gerrit.py  git.py  gitlab.py  jira.py  registry.py  scratchpad.py  search.py  (+5 more)
tests/: conftest.py  test_agent_loop.py  test_approval.py  test_audit_buffer.py  test_audit_delegation.py  test_backend_inference_hub.py  test_bash_tools.py  test_coding_agent_main.py  test_compaction.py  test_config.py  test_confluence_tools.py  test_connector_slack.py  test_delegation.py  test_delegation_manager.py  test_delegation_tool.py  test_dispatcher.py  test_file_tools.py  test_finalization.py  test_finalization_actions.py  test_gen_config.py  test_gen_policy.py  test_gerrit_tools.py  test_git_helpers.py  test_git_tools.py  test_gitlab_tools.py  test_integration_agent.py  test_integration_coding_agent.py  test_jira_tools.py  test_nmb_audit.py  test_nmb_broker.py  test_nmb_client.py  test_nmb_models.py  test_orchestrator.py  test_orchestrator_tools.py  test_prompt_builder.py  test_protocol.py  test_runtime.py  test_scratchpad.py  test_scratchpad_tools.py  test_skill_loader.py  (+7 more)
tests/integration/: conftest.py  test_delegation.py  test_full_workflow.py  test_lifecycle.py  test_policy.py  test_pubsub.py  test_request_reply.py  test_send_deliver.py  test_streaming.py
(+92 files in other folders)
