[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemoclaw-escapades"
version = "0.1.0"
description = "NemoClaw Escapades — an AI agent that learns to be a better software engineer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "slack-bolt>=1.21.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=9.0.0",
    "websockets>=13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
    "respx>=0.22.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nmb-client = "nemoclaw_escapades.nmb.client:_main"

[tool.nemoclaw-escapades]
# External CLI tools not installable via pip — pinned here so scripts and
# docs can reference a single source of truth for required versions.
openshell = ">=0.0.26"

[tool.hatch.build.targets.wheel]
packages = ["src/nemoclaw_escapades"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # aiosqlite's background thread calls call_soon_threadsafe after the
    # event loop closes during pytest teardown.  Harmless race — the DB
    # is already checkpointed and disposed by AuditDB.close().
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
markers = [
    "integration: multi-sandbox NMB integration tests (PolicyBroker + harness)",
    "live: integration tests against real service endpoints (require credentials)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
